# rov_arm_core

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  politocean_common  rov_common
include/: Commands.h  Direction.h
libs/: CMakeLists.txt  Config.cmake.in
libs/Controller/: CMakeLists.txt  Controller.cpp  Controller.h
libs/DCMotor/: CMakeLists.txt  DCMotor.cpp  DCMotor.h
libs/JoystickSubscriber/: CMakeLists.txt  JoystickSubscriber.cpp  JoystickSubscriber.h
libs/PwmMotor/: CMakeLists.txt  PwmMotor.cpp
libs/Sensor/: CMakeLists.txt  Sensor.h
libs/Sensor/include/: sensor_t.h
libs/Stepper/: CMakeLists.txt  Stepper.cpp
scripts/: PolitoceanATMega.service  PolitoceanSkeleton.service
src/: ATMegaController.cpp  ATMegaController1.cpp  Arm.cpp  ImuCalibration.cpp  JoystickSubscriber.cpp  Skeleton.cpp
